:bug: navbar: black dot in logo on mobile, doesnt show in developer mode localy

--- a/styles/components/Footer.module.scss
+++ b/styles/components/Footer.module.scss
@@ -32,6 +32,7 @@
   width: 100%;
   justify-content: center;
   margin-top: 25px;
+  margin-bottom: 10px;
 }
 
 .logo {
@@ -53,7 +54,7 @@
 }
 
 .link {
-  margin: 1rem 1rem;
+  margin: 0.5rem 1rem;
   cursor: pointer;
   opacity: 0.6;
 }
@@ -115,6 +116,16 @@
   left: -0.1rem;
   margin: 0;
   font-weight: 400;
+}
+
+.copyrightContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 0.8rem;
+  opacity: 0.5;
+  margin-top: 10px;
+  // margin-bottom: 1rem;
 }
 
 @media (max-width: 550px) {
