--- a/styles/components/navbar/navMobile.module.scss
+++ b/styles/components/navbar/navMobile.module.scss
@@ -22,6 +22,7 @@
   width: 65px;
   height: 40px;
   cursor: pointer;
+  z-index: 100;
 }
 
 // ? Main Menue Items:
